ModuleLocator fixed error so it finds modules now